--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 
+# t?n off the springboot banner
+spring.main.banner-mode=off
+
+#Reduce logging level. Set logging level to warn
+logging.level.root=warn
