--- a/05-spring-boot-rest-securiry/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
+++ b/05-spring-boot-rest-securiry/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
@@ -4,3 +4,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+#
+# Simple Spring Security
+#
+spring.security.user.name=ichiroo
+spring.security.user.password=ichiroo
+
+logging.level.org.springframework.security=DEBUG
